src/snapshots/libflatterer__tests__illegal.json-tables.csv.snap
---
source: src/lib.rs
assertion_line: 1898
expression: output

---
- "table_name,table_title"
- "main,main"

