src/snapshots/libflatterer__tests__inline_o2o_when_o2m.snap
---
source: src/lib.rs
expression: "&flat_files.table_metadata"

---
main:
  field_type:
    - text
    - number
    - text
    - text
  fields:
    - id
    - e_ea
    - e_eb
    - _link
  field_counts:
    - 2
    - 1
    - 1
    - 2
  rows: 2
  ignore: false
  ignore_fields:
    - false
    - true
    - true
    - false
  order: []
  field_titles:
    - id
    - e_ea
    - e_eb
    - _link
  table_name_with_separator: ""
  output_path: "[path]"
e:
  field_type:
    - number
    - text
    - text
    - text
  fields:
    - ea
    - eb
    - _link
    - _link_main
  field_counts:
    - 3
    - 3
    - 3
    - 3
  rows: 3
  ignore: false
  ignore_fields:
    - false
    - false
    - false
    - false
  order: []
  field_titles:
    - ea
    - eb
    - _link
    - _link_main
  table_name_with_separator: e_
  output_path: "[path]"

