src/snapshots/libflatterer__tests__inline_o2o_when_o2o.snap
---
source: src/lib.rs
expression: "&flat_files.table_metadata"
---
main:
  fields:
    - id
    - e_ea
    - e_eb
    - _link
  fields_set:
    - id
    - e_ea
    - e_eb
    - _link
  field_counts:
    - 2
    - 2
    - 2
    - 2
  rows: 2
  ignore: false
  ignore_fields:
    - false
    - false
    - false
    - false
  order: []
  field_titles:
    - id
    - e_ea
    - e_eb
    - _link
  table_name_with_separator: ""
  output_path: "[path]"
  field_titles_lc: []
  supplied_types: []
e:
  fields:
    - ea
    - eb
    - _link
    - _link_main
  fields_set:
    - ea
    - eb
    - _link
    - _link_main
  field_counts:
    - 2
    - 2
    - 2
    - 2
  rows: 2
  ignore: true
  ignore_fields:
    - false
    - false
    - false
    - false
  order: []
  field_titles:
    - ea
    - eb
    - _link
    - _link_main
  table_name_with_separator: e_
  output_path: "[path]"
  field_titles_lc: []
  supplied_types: []

