src/snapshots/libflatterer__tests__invalid_xlsx_char-2.snap
---
source: src/lib.rs
expression: output

---
- "table_name,field_name,field_type,field_title,count"
- "main,_link,text,_link,1"
- "main,_link_main,text,_link_main,1"
- "main,\u0000,text,\u0000,1"

