src/snapshots/libflatterer__tests__invalid_xlsx_char.snap
---
source: src/lib.rs
expression: "&value"

---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    schema:
      fields:
        - name: _link
          type: text
          count: 1
        - name: "\u0000"
          type: text
          count: 1
      primaryKey: _link
    path: csv/main.csv

