src/snapshots/libflatterer__tests__memory-games.csv-basic_in_object.json.snap
---
source: src/lib.rs
expression: lines
---
- - _link
  - _link_main
  - id
  - title
  - releaseDate
  - rating_code
  - rating_name
- - 0.games.0
  - "0"
  - "1"
  - A Game
  - 2015-01-01
  - E
  - Everyone
- - 0.games.1
  - "0"
  - "2"
  - B Game
  - 2016-01-01
  - E
  - Everyone

