src/snapshots/libflatterer__tests__memory-games_developer.csv-basic_in_object.json.snap
---
source: src/lib.rs
expression: lines
---
- - _link
  - _link_games
  - _link_main
  - name
- - 0.games.0.developer.0
  - 0.games.0
  - "0"
  - deva
- - 0.games.1.developer.0
  - 0.games.1
  - "0"
  - devb

