src/snapshots/libflatterer__tests__missing_line.ndjson-ndjson-datapackage.json.snap
---
source: src/lib.rs
expression: "&value"
---
profile: tabular-data-package
resources:
  - profile: tabular-data-resource
    name: main
    flatterer_name: main
    title: main
    schema:
      fields:
        - name: _link
          title: _link
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: "0"
            max_str: "1"
            count: 2
            empty_count: 0
            exact_unique: 2
            estimate_unique: ~
            top_20:
              - - "0"
                - 1
              - - "1"
                - 1
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
        - name: a
          title: a
          type: string
          format: string
          count: 2
          stats:
            min_len: 1
            max_len: 1
            min_str: b
            max_str: b
            count: 2
            empty_count: 0
            exact_unique: 1
            estimate_unique: ~
            top_20:
              - - b
                - 2
            sum: ~
            mean: ~
            variance: ~
            stddev: ~
            min_number: ~
            max_number: ~
            median: ~
            lower_quartile: ~
            upper_quartile: ~
            deciles: 0
            centiles: 0
      primaryKey: _link
    path: csv/main.csv

